// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch ePILTs against PILTS on Peregrine > receiver Peregrine::assetSwitchPool1::[RemoteToLocalSwitchExecuted] 1`] = `
[
  {
    "data": {
      "amount": "(rounded 50000000000000000)",
      "to": "4seWojfEHrk5YKPahdErazQ3CWEHZYi6NV4gKz5AaejWbRPJ",
    },
    "method": "RemoteToLocalSwitchExecuted",
    "section": "assetSwitchPool1",
  },
]
`;

exports[`Switch ePILTs against PILTS on Peregrine > receiver Peregrine::balances::[Transfer] 1`] = `
[
  {
    "data": {
      "amount": "(rounded 50000000000000000)",
      "from": "4nv4phaKc4EcwENdRERuMF79ZSSB5xvnAk3zNySSbVbXhSwS",
      "to": "4seWojfEHrk5YKPahdErazQ3CWEHZYi6NV4gKz5AaejWbRPJ",
    },
    "method": "Transfer",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 35000)",
      "from": "4nv4phaKc4EcwENdRERuMF79ZSSB5xvnAk3zNySSbVbXhSwS",
      "to": "4qPZ8fv6BjGoGKzfx5LtBFnEUp2b5Q5C1ErrjBNGmoFTLNHG",
    },
    "method": "Transfer",
    "section": "balances",
  },
]
`;

exports[`Switch ePILTs against PILTS on Peregrine > receiver Peregrine::messageQueue::[Processed] 1`] = `
[
  {
    "data": {
      "id": "(hash)",
      "origin": {
        "Sibling": 1000,
      },
      "success": true,
      "weightUsed": {
        "proofSize": 0,
        "refTime": 1000000000,
      },
    },
    "method": "Processed",
    "section": "messageQueue",
  },
]
`;

exports[`Switch ePILTs against PILTS on Peregrine > sender AssetHub::foreignAssets::[Transferred] {"V3":[{"id":{"Concrete":{"parents":2,"interior":{"X2":[{"GlobalConsensus":{"Ethereum":{"chainId":11155111}}},{"AccountKey20":{"network":null,"key":"0x06012c8cf97bead5deae237070f9587f8e7a266d"}}]}}},"fun":{"Fungible":"50000000000000000"}}]} 1`] = `
[
  {
    "data": {
      "amount": 50000000000000000,
      "assetId": {
        "interior": {
          "X2": [
            {
              "GlobalConsensus": {
                "Ethereum": {
                  "chainId": "(rounded 11000000)",
                },
              },
            },
            {
              "AccountKey20": {
                "key": "0x06012c8cf97bead5deae237070f9587f8e7a266d",
                "network": null,
              },
            },
          ],
        },
        "parents": 2,
      },
      "from": "15jSz35ugoWTc61xHPoxEkHte4o7UanKCk1gx1dizA8yuNs8",
      "to": "13cKp88mpGREFCq8KsJEFjpSBnjFuCNWq6bmD3js7fu4f66e",
    },
    "method": "Transferred",
    "section": "foreignAssets",
  },
]
`;

exports[`Switch ePILTs against PILTS on Peregrine > sender AssetHub::polkadotXcm::[Attempted] {"V3":[{"id":{"Concrete":{"parents":2,"interior":{"X2":[{"GlobalConsensus":{"Ethereum":{"chainId":11155111}}},{"AccountKey20":{"network":null,"key":"0x06012c8cf97bead5deae237070f9587f8e7a266d"}}]}}},"fun":{"Fungible":"50000000000000000"}}]} 1`] = `
[
  {
    "data": {
      "outcome": {
        "Complete": {
          "used": {
            "proofSize": "(rounded 6200)",
            "refTime": "(rounded 290000000)",
          },
        },
      },
    },
    "method": "Attempted",
    "section": "polkadotXcm",
  },
]
`;

exports[`Switch ePILTs against PILTS on Peregrine > sender AssetHubs::xcmpQueue::[XcmpMessageSent] {"V3":[{"id":{"Concrete":{"parents":2,"interior":{"X2":[{"GlobalConsensus":{"Ethereum":{"chainId":11155111}}},{"AccountKey20":{"network":null,"key":"0x06012c8cf97bead5deae237070f9587f8e7a266d"}}]}}},"fun":{"Fungible":"50000000000000000"}}]} 1`] = `
[
  {
    "data": {
      "messageHash": "(hash)",
    },
    "method": "XcmpMessageSent",
    "section": "xcmpQueue",
  },
]
`;
